ingress/grafana-ingress.yaml
  apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    annotations:
      kubernetes.io/ingress.class: nginx
    name: grafana
    namespace: default
  spec:
    rules:
      - host: grafana.<YOUR_DOMAIN>
        http:
          paths:
            - backend:
                serviceName: grafana
                servicePort: 80
              path: /
