ingress/humio-ingress.yaml
  apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    annotations:
      kubernetes.io/ingress.class: nginx
    name: humio
    namespace: default
  spec:
    rules:
      - host: humio.<YOUR_DOMAIN>
        http:
          paths:
            - backend:
                serviceName: k8s-humio
                servicePort: 8080
              path: /
