ingress/prometheus-ingress.yaml
  apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    annotations:
      kubernetes.io/ingress.class: nginx
    name: prometheus
    namespace: default
  spec:
    rules:
      - host: prometheus.<YOUR_DOMAIN>
        http:
          paths:
            - backend:
                serviceName: prometheus-server
                servicePort: 80
              path: /
